match caffe results

--- a/fast-rcnn/experiments/cfgs/kitti_rcnn.yml
+++ b/fast-rcnn/experiments/cfgs/kitti_rcnn.yml
@@ -3,7 +3,10 @@ IS_RPN: False
 IS_MULTISCALE: False
 REGION_PROPOSAL: 'RPN'
 TRAIN:
-  LEARNING_RATE: 0.0001
+  LEARNING_RATE: 0.001
+  MOMENTUM: 0.9
+  GAMMA: 0.1
+  STEPSIZE: 30000
   SCALES_BASE: !!python/tuple [1.0, 2.0, 3.0, 4.0]
   NUM_PER_OCTAVE: 4
   IMS_PER_BATCH: 2
