start training feature extra

--- a/fast-rcnn/experiments/cfgs/kitti_rcnn.yml
+++ b/fast-rcnn/experiments/cfgs/kitti_rcnn.yml
@@ -1,6 +1,7 @@
 EXP_DIR: kitti
 IS_RPN: False
-IS_MULTISCALE: False
+IS_MULTISCALE: True
+IS_EXTRAPOLATING: True
 REGION_PROPOSAL: 'RPN'
 TRAIN:
   LEARNING_RATE: 0.001
